@@ -1,5 +1,12 @@
 2003-07-08  Alan Modra  <amodra@bigpond.net.au>
 
+	* elf-bfd.h (struct elf_obj_tdata): Move linker_section_pointers..
+	* elf32-ppc.c (struct ppc_elf_obj_tdata): ..to here.  New.
+	(ppc_elf_tdata): Define.
+	(elf_local_ptr_offsets): Adjust.
+	(ppc_elf_mkobject): New function.
+	(bfd_elf32_mkobject): Define.
+
 	* elfcode.h (elf_object_p): Allocate tdata via _bfd_set_format.
 	* elfcore.h (elf_core_file_p): Likewise.
 	* section.c (bfd_section_init): Remove prototype.
@@ -159,7 +166,7 @@
 	(elf_s390_relocate_section): Likewise.
 	* elf64-s390.c: Same changes as for elf32-s390.c.
 	* reloc.c: Add long displacement relocations BFD_RELOC_390_20,
-	BFD_RELOC_390_GOT20, BFD_RELOC_390_GOTPLT20 and 
+	BFD_RELOC_390_GOT20, BFD_RELOC_390_GOTPLT20 and
 	BFD_RELOC_390_TLS_GOTIE20.
 	* bfd-in2.h: Regenerate.
 	* libbfd.h: Likewise.
